add installation process
git-svn-id: http://mysqlftppc.svn.sourceforge.net/svnroot/mysqlftppc/bigram/trunk@8 fbe6fafc-a77a-4c0b-9ca6-bdabefc0bdc6

--- a/README
+++ b/README
@@ -7,6 +7,8 @@ If you check out the source from the repository, you need autoconf, automake and
 to build the plugin. Type as following:
 $ aclocal
 $ libtoolize --automake
+$ automake --add-missing
+$ touch INSTALL NEWS AUTHORS ChangeLog
 $ automake
 $ autoconf
 
