--- a/README
+++ b/README
@@ -28,9 +28,8 @@ You can't specify the operators such as + or -, what appears in boolean mode.
 You can only pass a sentence and get a result set according to the similarity.
 
 Boolean mode of n-gram is easy to understand. You can specify which sentence
-to be present or not. Current limitation is that you can't use boolean syntax,
-such as + or -. All you can do is pass a sentence and get a result set which
-a row does have a specified sequence.
+to be present or not. You can't use trunc operator because it was impossible
+to use prefix match in the MySQL index when the index is bi-gram.
 
 Both natural language mode and boolean mode use unicode internally, and
 collates with unicode collation. The encoding conversion is done automatically.
