add support of Unicode normalization and various language specific collation.
git-svn-id: http://mysqlftppc.svn.sourceforge.net/svnroot/mysqlftppc/bigram/trunk@28 fbe6fafc-a77a-4c0b-9ca6-bdabefc0bdc6

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 * Requirements
-MySQL 5.1 and higher. ucs2_unicode_ci collation is required to be available.
-
+MySQL 5.1 and higher. If you want to use collation, you'll need that 
+collation in mysqld. If you want to use unicode normalization, utf8 charset
+must be built in your mysqld.
 
 * SPEC
 This plugin implements bi-gram tokenizer. As of MySQL SQL syntax, you can
